templates/nitter-service.yaml
#@ load("@ytt:data", "data")
#@ load("common.lib.yaml", "labels", "selectors")
#@ load("helpers.star", "name")

---
apiVersion: v1
kind: Service
metadata:
  name: #@ name(data.values) + "-nitter-svc"
  labels: #@ labels(data.values)
spec:
  type: #@ data.values.service.type
  #@ if data.values.service.loadBalancerIP:
  loadBalancerIP: #@ data.values.service.loadBalancerIP
  #@ end
  #@ if data.values.service.type == "NodePort" or data.values.service.type == "LoadBalancer":
  externalTrafficPolicy: #@ data.values.service.externalTrafficPolicy
  #@ end
  ports:
    #@ if data.values.service.http.enabled:
    - port: #@ data.values.service.http.port
      targetPort: http
      #@ if data.values.service.http.nodePort and data.values.service.type == "NodePort":
      nodePort: #@ data.values.service.http.nodePort
      #@ end
      protocol: TCP
      name: http
    #@ end
    #@ if data.values.service.https.enabled:
    - port: #@ data.values.service.https.port
      targetPort: https
      #@ if data.values.service.https.nodePort and data.values.service.type == "NodePort":
      nodePort: #@ data.values.service.https.nodePort
      #@ end
      protocol: TCP
      name: https
    #@ end
  selector: #@ selectors(data.values)
